@@ -282,7 +282,7 @@ public class SchlammPanel extends JPanel {
                     }
                 }
             };
-            probeEditAction.putValue(Action.MNEMONIC_KEY, new Integer(
+            probeEditAction.putValue(Action.MNEMONIC_KEY, Integer.valueOf(
                     KeyEvent.VK_B));
             probeEditAction.putValue(Action.ACCELERATOR_KEY, KeyStroke
                     .getKeyStroke(KeyEvent.VK_ENTER, 0, false));
@@ -321,7 +321,7 @@ public class SchlammPanel extends JPanel {
                     }
                 }
             };
-            probeLoeschAction.putValue(Action.MNEMONIC_KEY, new Integer(
+            probeLoeschAction.putValue(Action.MNEMONIC_KEY, Integer.valueOf(
                     KeyEvent.VK_L));
             probeLoeschAction.putValue(Action.ACCELERATOR_KEY, KeyStroke
                     .getKeyStroke(KeyEvent.VK_DELETE, 0, false));
